<resources>
    <string name="app_name">reap_service</string>
    <string name="sign_up">SIGN UP</string>
    <string name="log_in">LOGIN</string>
    <string name="menu_home">홈</string>
    <string name="menu_search">검색</string>
    <string name="menu_my_info">내 정보</string>
    <string name="record">녹음</string>
    <string name="search">검색</string>
    <string name="question">질문</string>
    <string name="search_recordings">음성파일 검색</string>
    <string name="calendar">달력</string>
    <string name="back">뒤로 가기</string>
    <string name="recent_recordings">최근 녹음</string>
    <string name="check_by_date">날짜별 확인</string>
    <string name="profile_image">사용자 이미지</string>


    <string name="agreement_conditions_text">서비스 이용약관 동의(필수)
2017년 5월 12일 제정

2021년 6월 14일 최종 개정

본 약관은 네이버 서비스인 네이버 클로바(NAVER CLOVA)를 이용하는 네이버 회원에게 추가적으로 적용되는 약관으로, 본 약관에서 정하지 않은 사항은 네이버 서비스 이용약관(http://www.naver.com/policy/service.html)이 적용됩니다.

제 1 조 (목적)
이 이용약관은 네이버 회원으로서 네이버의 AI 플랫폼 서비스인 네이버 클로바(NAVER CLOVA) 서비스(이하 ‘네이버 클로바’라 합니다)를 이용하는 자(이하 ‘이용자’라 합니다)와 네이버 클로바의 제공자인 네이버주식회사(이하 ‘회사’라 합니다) 사이의 권리 및 의무를 규정하는 것을 그 목적으로 합니다.
제 2 조 (제한적 사용권의 부여)
이용자가 본 이용약관에 동의한 경우에 한하여, 회사는 해당 이용자에게 네이버 클로바를 지역적 제한 없이 이용할 수 있도록 하는 양도 불가능한 비독점적이고 개인적인 사용권을 무상으로 부여합니다.
제 3 조 (이용자의 의무)
1이용자는 본 이용약관에 동의하는 경우에 한하여 네이버 클로바를 이용하실 수 있으며, 본 이용약관에 동의하지 않거나 동의를 철회할 경우 즉시 네이버 클로바의 이용을 중지해야 합니다.
2이용자는 네이버 클로바를 사용함에 있어서 본 약관에서 규정하는 사항과 관련법령, 기타 회사가 정한 제반 규정 및 공지사항을 준수하여야 하며, 특히 네이버 클로바와 관련하여 다음과 같은 행위를 해서는 안됩니다.
네이버 클로바를 리버스엔지니어링(reverse-engineering, 역분석)하는 행위
네이버 클로바를 제3자에게 유상 혹은 무상으로 제공, 배포 및 판매하는 행위
네이버 클로바를 제공자 및 운영자 등 출처를 혼동하게 하는 행위
네이버 클로바를 이용하여 (저작권 등) 제3자의 권리 혹은 명예를 침해하는 행위
네이버 클로바를 이용하여 정보통신망법 등 관련법령을 위반하는 위법행위를 하는 행위
제 4 조 (네이버 클로바 이용 데이터의 저장 및 활용)
회사는 이용자에게 좀 더 좋은 네이버 클로바 서비스를 제공하기 위하여 이용자가 네이버 클로바를 이용하는 과정에서 입력하는 데이터(음성명령 내용, 메모 내용, 커뮤니케이션 내용, 연동되는 기기(물건)의 위치 정보 등, 이하 ‘네이버 클로바 이용 데이터’라 합니다)를 저장하여 네이버 클로바의 품질 개선 및 성능 향상, 이용자에 대한 서비스의 고도화 및 최적화 등의 목적으로 활용할 수 있습니다.
제 5 조 (네이버 클로바 관련 권리 및 관리 등)
1네이버 클로바의 저작권(프로그램의 소스코드, 실행파일 및 UI/UX, 삽입된 이미지 등 프로그램과 관련된 모든 저작물을 포함함)은 회사(혹은 원저작권자)에게 있으며, 이용자는 본 이용약관에서 정한 바에 따른 제한적 사용권만을 취득할 뿐, 그 외 네이버 클로바에 대한 어떠한 권리도 취득하지 않습니다.
2네이버 클로바에 삽입되어 있는 모든 네이버 클로바 관련 등록 표장들의 상표권은 회사에게 있으며, 이용자는 해당 표장들에 대해서 어떠한 권리도 취득하지 않습니다.
3본 이용약관의 어떠한 내용도 본 이용약관에서 정한 바에 따른 제한적 사용권을 넘어 네이버 클로바의 소스코드, 실행파일 및 UI/UX, 혹은 네이버 클로바의 상표명, 상표, 서비스 마크, 로고, 도메인 이름 및 기타 고유한 브랜드 표시를 사용할 권리를 이용자에게 부여하는 것으로 해석되지 않습니다.
4회사는 네이버 클로바의 오류 수정 및 성능 개선 등을 위하여 네이버 클로바를 업데이트할 수 있습니다.
제 6 조 (회사의 책임 제한)
1회사는 무료로 제공되는 네이버 클로바의 완전성, 무결성, 적절성 등을 보증하지 않습니다.
2회사는 네이버 클로바를 통해 무료로 제공되는 각종 컨텐츠의 정확성, 적절성 등을 보증하지 않으며, 제공되는 컨텐츠는 회사의 사정에 따라 변경될 수 있습니다.
3이용자는 네이버 클로바를 자신의 책임 하에 본 이용약관 및 관계법령을 준수하여 적법하게 이용하여야 하며, 회사가 이용자의 네이버 클로바를 이용한 위법행위에 대해 책임을 지지는 않습니다.
4회사는 제3의 개발자로 하여금 클로바에서 이용 가능한 익스텐션을 개발･배포하도록 허락할 수 있습니다. 각 익스텐션은 그 개발자의 책임으로 제공되는 서비스이므로, 익스텐션의 개발･배포･이용과정에서 발생하는 일체의 문제에 대한 책임은 그 개발자가 지며, 회사는 원칙적으로 이에 대한 책임을 지지 않습니다. 또한 회사는 위법하거나 제3자의 권리를 침해하는 내용을 제공하거나 정상적으로 동작하지 않는 등 회사의 익스텐션 운영정책을 위배되는 익스텐션에 대해서는 그 제공을 중단시킬 수 있습니다.
5제3의 개발자가 개발･배포한 익스텐션을 통해 전자상거래 등에서의 소비자보호에 관한 법률 상의 통신판매 또는 통신판매중개가 이루어지는 경우, 회사는 통신판매의 당사자 또는 통신판매중개자가 아니므로, 해당 익스텐션을 통해 이루어진 거래에 대해 책임을 지지 않습니다.
제 7 조 (네이버 클로바와 연동되는 기기의 사용 시 특약)
1이용자는 네이버 클로바와 연동되는 기기(예를 들어 스피커 제품 등의 하드웨어를 의미하며, 이하 ‘네이버 클로바 연동기기’라 합니다)를 사용함에 있어서 다음의 사항을 확인하고 동의합니다.
회사는 네이버 클로바 연동기기의 이용자 맞춤 서비스 제공을 위해 네이버 클로바와 해당 기기의 연동 후 이용자 관련 정보의 일부를 이용자의 동의를 얻어 연동기기에서의 서비스에 이용할 수 있습니다.
전 호에 따라 네이버 클로바 연동기기에서 이용하는 정보는 이용자가 네이버 클로바와 네이버 클로바 연동기기와의 연동을 초기화•해제(이하 ‘연동해제’라 합니다)하기 전까지 계속 서비스에 이용되며, 연동 시마다 최신의 정보로 업데이트 될 수 있습니다.
이용자는 언제라도 연동해제를 하여 제1호의 정보의 서비스 이용을 중단시킬 수 있습니다.
2이용자는 네이버 클로바 연동기기의 사용 및 타인으로의 대여 혹은 양도함에 있어서 다음과 같은 사항을 주의하여야 하며, 회사의 귀책 없이 이용자가 하기 주의사항(네이버 클로바 연동기기의 이용 과정에서도 별도로 고지됨)을 준수하지 않아서 발생하는 피해에 대해서는 회사에 책임을 물을 수 없습니다.
네이버 클로바 연동기기 중 정보 제공 등을 명령하는 자를 특별히 식별하지 않는 제품을 연동하여 사용하는 경우, 연동으로 인해 네이버 클로바 연동기기에 전송된 이용자 관련 정보 혹은 이용자가 네이버 클로바 연동기기에 직접 입력한 정보가 네이버 클로바 연동기기에 물리적으로 접근할 수 있는 타인에게도 제공될 수 있습니다. 따라서 이러한 제공이 되지 않도록 네이버 클로바 연동기기를 해당 기기 내에 저장된 이용자 관련 정보에 접근해도 무방한 자들만 물리적으로 접근할 수 있는 공간에 보관하시거나, 그렇게 할 수 없는 경우에는 연동해제를 통해 위와 같은 제공이 되지 않도록 하시기 바랍니다.
네이버 클로바 연동기기 중 정보 제공 등을 명령하는 자를 특별히 식별하지 않는 제품을 타인에게 대여하거나 양도하실 경우, 연동해제를 하지 않고 대여 혹은 양도하실 경우 연동 시 네이버 클로바 연동기기에 전송된 이용자 관련 정보 혹은 이용자가 네이버 클로바 연동기기에 직접 입력한 정보에 대여인･양수인이 접근할 수 있게 됩니다. 따라서 해당 연동기기를 대여 혹은 양도하실 경우에는 반드시 연동해제를 하신 후에 대여 혹은 양도하시기 바랍니다.
제 8 조 (계약의 해지, 사용제한)
1이용자는 언제든 네이버 클로바의 사용을 중단하고, 본 약관에 따른 이용계약을 해지할 수 있습니다. 다만, 이용자가 이용계약을 해지하는 경우 불필요한 데이터의 반복적 축적 및 네이버 클로바 가입/탈퇴의 반복을 통한 어뷰징을 방지하고 네이버 클로바의 안정적인 운영을 위하여 해지한 날로부터 1개월간 네이버 클로바 재가입이 제한됩니다.
2이용자가 관련 법령을 위반하거나 본 이용약관을 준수하지 않는 경우, 회사는 임의로 본 계약을 해지하거나 이용자의 네이버 클로바 사용을 일시적 또는 영구적으로 제한할 수 있습니다.
제 9 조 (재판권 및 준거법)
본 약관의 준거법은 대한민국 법으로 하며, 본 약관과 관련하여 소송이 제기되는 경우 민사소송법 상의 관할 법원을 재판관할을 갖는 법원으로 합니다.
부칙
본 약관은 2021년 6월 14일부터 적용됩니다. 단, 2021년 5월 13일부터 2021년 6월 14일까지의 기간에 가입하는 신규 이용자의 경우 가입 즉시 본 약관의 효력이 발생합니다.</string>
</resources>